--- a/src/components/atoms/Text/text.css
+++ b/src/components/atoms/Text/text.css
@@ -218,3 +218,340 @@ h3 {
   margin-bottom: 50px;
 }
 
+.heading-10 {
+  color: #fff;
+}
+
+h2 {
+  margin-top: 10px;
+  margin-bottom: 24px;
+  color: #0f172a;
+  font-size: 37.9px;
+  line-height: 48px;
+  font-weight: 400;
+  letter-spacing: -0.02em;
+}
+
+.c-card__text-content {
+  max-width: 24ch;
+}
+
+.is--white.mg-btm__16 {
+  margin-bottom: 16px;
+}
+
+.is--white {
+  margin-bottom: 12px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.header-access {
+  animation-name: padding-up;
+}
+
+.header-access2 {
+  animation-name: padding-up;
+}
+
+@keyframes padding-up {
+  0% {
+    transform: translateX(50%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+
+h4 {
+  margin-top: 10px;
+  margin-bottom: 24px;
+  color: #0f172a;
+  font-size: 21.33px;
+  line-height: 32px;
+  font-weight: 400;
+  letter-spacing: -0.02em;
+}
+
+.is--white.opacity-60 {
+  margin-bottom: 16px;
+  color: hsla(0, 0%, 100%, 0.6);
+  font-size: 16px;
+  text-decoration: none;
+}
+
+.hello2 {
+  animation-name: uppppp;
+  padding-top: 25px;
+  transition-duration: 0.5s;
+}
+
+@keyframes uppppp {
+  0% {
+    transform: translateX(50%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.swipe-slide , .swiper-slide-next:hover .hello2 {
+  opacity: 1;
+  animation-name: slide-check;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in;
+}
+
+.swiper-slide ,.swiper-slide-next :hover .access-button2{
+  opacity: 1;
+  animation-name: slide-check;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in;
+}
+
+.access-button2 {
+  opacity: 0;
+}
+
+.access-button2 :hover {
+  opacity: 1;
+}
+
+/* .c-hero__text {
+  max-width: 40ch;
+  padding-bottom: 60px;
+} */
+
+.ruby-color {
+  color: #ff2868;
+}
+
+.heading-3 {
+  font-weight: 300;
+}
+
+.green-color {
+  color: #35c89f;
+}
+
+.c-text__content {
+  max-width: 50ch;
+  padding-bottom: 32px;
+}
+
+.c-content_wrapper {
+  max-width: 50%;
+  padding-bottom: 40px;
+}
+
+.p-top__32 {
+  padding-top: 32px;
+  text-align: left;
+  -o-object-fit: fill;
+  object-fit: fill;
+}
+
+.c-info__holder.cc-green {
+  background-color: rgba(53, 200, 159, 0.09);
+}
+
+.c-info__holder {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 75%;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 15px 10px;
+  border-radius: 17px;
+  background-color: rgba(0, 154, 255, 0.09);
+}
+
+.heading-7.cc-green {
+  color: #35c89f;
+}
+
+.heading-7 {
+  color: #009aff;
+}
+h5 {
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: #0f172a;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  letter-spacing: -0.02em;
+}
+
+.blue-color {
+  color: #0f00c0;
+}
+
+.c-header,
+.c-header.center-text {
+  margin-bottom: 50px;
+}
+
+.center-text.p-btm__12 {
+  padding-bottom: 12px;
+}
+
+.p-btm__12 {
+  padding-bottom: 12px;
+}
+
+
+.c-info__holder {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  width: 75%;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 15px 10px;
+  border-radius: 17px;
+  background-color: rgba(0, 154, 255, 0.09);
+}
+
+.c-hero__text {
+  max-width: 40ch;
+  padding-bottom: 60px;
+}
+.c-hero__text.cc-45 {
+  max-width: 45ch;
+}
+
+.beige-color {
+  color: #fdf5f7;
+}
+
+.p-top__46 {
+  padding-top: 46px;
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.c-text__content.center-text.cc-30.mg-auto {
+  min-width: auto;
+  margin: 0 auto;
+  padding-top: 0;
+}
+.c-text__content.cc-30.center-text {
+  max-width: 30ch;
+}
+.c-text__content.cc-30 {
+  max-width: 30ch;
+  min-width: 30ch;
+  padding-bottom: 0;
+}
+
+.heading-11 {
+  font-style: italic;
+  font-weight: 300;
+}
+
+.heading-12 {
+  text-decoration: underline;
+}
+
+.c-content_wrapper.cc-100 {
+  width: 100%;
+  max-width: none;
+}
+
+.c-hero__text.cc-50 {
+  max-width: 50ch;
+}
+
+.c-hero__content {
+  max-width: 50%;
+  padding-top: 100px;
+  padding-bottom: 0;
+}
+
+.c-ctn.cc-70.cc-absolute {
+  margin-bottom: 0;
+  color: #0f172a;
+}
+
+.is--white.mg-btm__32 {
+  font-size: 70px;
+  line-height: 90px;
+}
+
+.mg-btm__32 {
+  margin-top: 0;
+  margin-bottom: 32px;
+}
+
+.c-pricing__info.p-btm__25 {
+  padding-bottom: 25px;
+}
+
+.c-pricing__info {
+  padding: 25px 32px 50px;
+}
+.ruby-color {
+  color: #ff2868;
+}
+
+.c-pricing__features {
+  padding-right: 32px;
+  padding-bottom: 55px;
+  padding-left: 32px;
+}
+
+.c-line-separator.cc-ruby {
+  background-color: rgba(255, 40, 104, 0.65);
+}
+
+.c-line-separator {
+  height: 1px;
+  margin-bottom: 25px;
+  background-color: rgba(12, 29, 54, 0.65);
+}
+
+.text-14.p-btm__10 {
+  padding-bottom: 10px;
+}
+
+.text-14 {
+  font-size: 14px;
+}
+
+.p-left__20 {
+  padding-left: 20px;
+}
+
+ul {
+  margin-top: 0;
+  margin-bottom: 10px;
+  padding-left: 40px;
+}
+
+.text-14.light-black {
+  color: rgba(12, 29, 54, 0.65);
+}
+
+.c-pricing__item.cc-green {
+  width: 35vw;
+  background-color: rgba(53, 200, 159, 0.09);
+}
+
+.is--white.opacity-60 {
+  margin-bottom: 16px;
+  color: hsla(0, 0%, 100%, 0.6);
+  font-size: 16px;
+  text-decoration: none;
+}
+
