--- a/src/css/Assess/assess-main.css
+++ b/src/css/Assess/assess-main.css
@@ -23,9 +23,9 @@ img {
 .w-icon-dropdown-toggle:before {
   content: "\e603";
 }
-* {
+/* * {
   box-sizing: border-box;
-}
+} */
 .w-inline-block {
   max-width: 100%;
   display: inline-block;
@@ -184,15 +184,15 @@ img {
   font-size: 14px;
   line-height: 20px;
 } */
-h1 {
+/* h1 {
   margin: 20px 0 40px;
   color: #0f172a;
   font-size: 50.52px;
   line-height: 64px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-h2 {
+} */
+/* h2 {
   margin-top: 10px;
   margin-bottom: 24px;
   color: #0f172a;
@@ -200,8 +200,8 @@ h2 {
   line-height: 48px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-h3 {
+} */
+/* h3 {
   margin-top: 0;
   margin-bottom: 10px;
   color: #0f172a;
@@ -209,8 +209,8 @@ h3 {
   line-height: 40px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-h4 {
+} */
+/* h4 {
   margin-top: 10px;
   margin-bottom: 24px;
   color: #0f172a;
@@ -218,8 +218,8 @@ h4 {
   line-height: 32px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-h5 {
+} */
+/* h5 {
   margin-top: 0;
   margin-bottom: 10px;
   color: #0f172a;
@@ -227,20 +227,20 @@ h5 {
   line-height: 24px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-p {
+} */
+/* p {
   margin-top: 0;
   margin-bottom: 40px;
   color: rgba(15, 23, 42, 0.65);
   font-size: 16px;
   line-height: 24px;
-}
-.c-section {
+} */
+/* .c-section {
   position: relative;
   padding-top: 80px;
   padding-bottom: 80px;
   color: #0f172a;
-}
+} */
 .c-section.no-padding {
   padding-top: 0;
   padding-bottom: 0;
@@ -374,12 +374,12 @@ p {
   -ms-flex-align: center;
   align-items: center;
 }
-.flex-wrapper {
+/* .flex-wrapper {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-}
+} */
 .flex-wrapper.cc-spaced {
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
@@ -402,17 +402,17 @@ p {
 .flex-wrapper.cc-95 {
   width: 95%;
 }
-.center-text {
+/* .center-text {
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   color: #0f172a;
   text-align: center;
-}
-.center-text.p-btm__12 {
+} */
+/* .center-text.p-btm__12 {
   padding-bottom: 12px;
-}
+} */
 .center-text.cc--author {
   margin-bottom: 4px;
 }
@@ -517,12 +517,12 @@ p {
 .c-btn.cc-with-icon.cc-white {
   background-color: #fff;
 }
-.c-btn.cc-tag-time {
+/* .c-btn.cc-tag-time {
   min-height: auto;
   min-width: 80px;
   padding: 7px 10px;
   background-color: #f59e0b;
-}
+} */
 .c-btn.cc-white {
   background-color: #fdf5f7;
   color: #0f172a;
@@ -692,13 +692,13 @@ p {
   padding-top: 100px;
   padding-bottom: 0;
 }
-.c-hero__text {
+/* .c-hero__text {
   max-width: 40ch;
   padding-bottom: 60px;
 }
 .c-hero__text.cc-45 {
   max-width: 45ch;
-}
+} */
 .c-bubble__wrapper {
   position: absolute;
   left: auto;
@@ -802,10 +802,10 @@ p {
   bottom: 10%;
   padding: 0;
 }
-.c-header,
+/* .c-header,
 .c-header.center-text {
   margin-bottom: 50px;
-}
+} */
 .c-header.cc-60 {
   max-width: 60ch;
 }
@@ -894,10 +894,10 @@ p {
 .c-content-holder.flex.p-btm__72 {
   padding-bottom: 0;
 }
-.c-content_wrapper {
+/* .c-content_wrapper {
   max-width: 50%;
   padding-bottom: 40px;
-}
+} */
 .c-content_wrapper.cc-100 {
   width: 100%;
   max-width: none;
@@ -943,10 +943,10 @@ p {
 .c-content_wrapper.p-top__72 {
   padding-top: 0;
 }
-.c-text__content {
+/* .c-text__content {
   max-width: 50ch;
   padding-bottom: 32px;
-}
+} */
 .c-text__content.center-text.cc-30.mg-auto {
   min-width: auto;
   margin: 0 auto;
@@ -963,12 +963,12 @@ p {
 .p-top__80 {
   padding-top: 80px;
 }
-.green-color {
+/* .green-color {
   color: #35c89f;
-}
-.heading-3 {
+} */
+/* .heading-3 {
   font-weight: 300;
-}
+} */
 .c-assess__svg {
   width: 100%;
   height: 100%;
@@ -1505,10 +1505,10 @@ p {
   -ms-flex-align: center;
   align-items: center;
 }
-.btn-holder.cc-30 {
+/* .btn-holder.cc-30 {
   width: auto;
   max-width: 30%;
-}
+} */
 .c-illustration__svg {
   position: relative;
   width: 100%;
@@ -1530,7 +1530,7 @@ p {
   -o-object-fit: cover;
   object-fit: cover;
 }
-.c-info__holder {
+/* .c-info__holder {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1541,10 +1541,10 @@ p {
   padding: 15px 10px;
   border-radius: 17px;
   background-color: rgba(0, 154, 255, 0.09);
-}
-.c-info__holder.cc-green {
+} */
+/* .c-info__holder.cc-green {
   background-color: rgba(53, 200, 159, 0.09);
-}
+} */
 .c-info__holder.cc-green.cc-right {
   margin-right: 0;
   margin-left: 0;
@@ -1565,12 +1565,12 @@ p {
   -ms-flex-item-align: start;
   align-self: flex-start;
 }
-.heading-7 {
+/* .heading-7 {
   color: #009aff;
-}
-.heading-7.cc-green {
+} */
+/* .heading-7.cc-green {
   color: #35c89f;
-}
+} */
 .no-padding {
   margin-top: 0;
   margin-bottom: 0;
@@ -1621,18 +1621,18 @@ p {
 .mg-right__20 {
   margin-right: 20px;
 }
-.p-btm__12 {
+/* .p-btm__12 {
   padding-bottom: 12px;
-}
+} */
 .text-12 {
   font-size: 12px;
 }
-.p-top__32 {
+/* .p-top__32 {
   padding-top: 32px;
   text-align: left;
   -o-object-fit: fill;
   object-fit: fill;
-}
+} */
 .c-menu-button,
 .c-nav__menu-list {
   display: none;
