--- a/src/css/Homepage/full.css
+++ b/src/css/Homepage/full.css
@@ -264,12 +264,12 @@ p {
   font-size: 16px;
   line-height: 24px;
 }
-.c-section {
+/* .c-section {
   position: relative;
   padding-top: 80px;
   padding-bottom: 80px;
   color: #0f172a;
-}
+} */
 .c-section.no-padding {
   padding-top: 0;
   padding-bottom: 0;
@@ -2479,9 +2479,9 @@ p {
 .paragraph {
   color: rgba(255, 255, 255, 0.65);
 }
-.heading-10 {
+/* .heading-10 {
   color: #fff;
-}
+} */
 .heading-11 {
   font-style: italic;
   font-weight: 300;
