--- a/src/css/Homepage/ststst.css
+++ b/src/css/Homepage/ststst.css
@@ -53,7 +53,7 @@ html.w-mod-touch * {
   cursor: pointer;
   border-radius: 0;
 }
-h2 {
+/* h2 {
   margin-top: 10px;
   margin-bottom: 24px;
   color: #0f172a;
@@ -61,8 +61,8 @@ h2 {
   line-height: 48px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-h4 {
+} */
+/* h4 {
   margin-top: 10px;
   margin-bottom: 24px;
   color: #0f172a;
@@ -70,7 +70,7 @@ h4 {
   line-height: 32px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
+} */
 /* p {
   margin-top: 0;
   margin-bottom: 40px;
@@ -127,20 +127,20 @@ h4 {
 .c-card.cc-pink-bg._1 {
   background-color: #009aff;
 }
-.is--white {
+/* .is--white {
   margin-bottom: 12px;
   color: #fff;
   text-decoration: none;
-}
-.is--white.opacity-60 {
+} */
+/* .is--white.opacity-60 {
   margin-bottom: 16px;
   color: hsla(0, 0%, 100%, 0.6);
   font-size: 16px;
   text-decoration: none;
-}
-.is--white.mg-btm__16 {
+} */
+/* .is--white.mg-btm__16 {
   margin-bottom: 16px;
-}
+} */
 .swiper-slide {
   width: 32vw;
   max-width: 32vw;
@@ -165,9 +165,9 @@ h4 {
   margin-top: 0;
   margin-bottom: 0;
 } */
-.c-card__text-content {
+/* .c-card__text-content {
   max-width: 24ch;
-}
+} */
 .c-card__header {
   display: -webkit-box;
   display: -webkit-flex;
