--- a/src/css/Katharine-Archer/Katharine-Archer.css
+++ b/src/css/Katharine-Archer/Katharine-Archer.css
@@ -281,12 +281,12 @@ p {
   font-size: 16px;
   line-height: 24px;
 }
-.c-section {
+/* .c-section {
   position: relative;
   padding-top: 80px;
   padding-bottom: 80px;
   color: #0f172a;
-}
+} */
 .c-section.no-padding {
   padding-top: 0;
   padding-bottom: 0;
