--- a/src/css/remain/full-remain.css
+++ b/src/css/remain/full-remain.css
@@ -209,15 +209,15 @@ svg:not(:root) {
   font-size: 14px;
   line-height: 20px;
 } */
-h1 {
+/* h1 {
   margin: 20px 0 40px;
   color: #0f172a;
   font-size: 50.52px;
   line-height: 64px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-h2 {
+} */
+/* h2 {
   margin-top: 10px;
   margin-bottom: 24px;
   color: #0f172a;
@@ -225,8 +225,8 @@ h2 {
   line-height: 48px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-h3 {
+} */
+/* h3 {
   margin-top: 0;
   margin-bottom: 10px;
   color: #0f172a;
@@ -234,8 +234,8 @@ h3 {
   line-height: 40px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-h4 {
+} */
+/* h4 {
   margin-top: 10px;
   margin-bottom: 24px;
   color: #0f172a;
@@ -243,8 +243,8 @@ h4 {
   line-height: 32px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-h5 {
+} */
+/* h5 {
   margin-top: 0;
   margin-bottom: 10px;
   color: #0f172a;
@@ -252,20 +252,20 @@ h5 {
   line-height: 24px;
   font-weight: 400;
   letter-spacing: -0.02em;
-}
-p {
+} */
+/* p {
   margin-top: 0;
   margin-bottom: 40px;
   color: rgba(15, 23, 42, 0.65);
   font-size: 16px;
   line-height: 24px;
-}
-.c-section {
+} */
+/* .c-section {
   position: relative;
   padding-top: 80px;
   padding-bottom: 80px;
   color: #0f172a;
-}
+} */
 .c-section.no-padding {
   padding-top: 0;
   padding-bottom: 0;
@@ -364,12 +364,12 @@ p {
   -ms-flex-direction: column;
   flex-direction: column;
 }
-.flex-wrapper {
+/* .flex-wrapper {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-}
+} */
 .flex-wrapper.cc-spaced {
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
@@ -395,15 +395,15 @@ p {
 .flex-wrapper.cc-95 {
   width: 95%;
 }
-.center-text {
+/* .center-text {
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
   color: #0f172a;
   text-align: center;
-}
-.c-btn {
+} */
+/* .c-btn {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -427,7 +427,7 @@ p {
   letter-spacing: -0.02em;
   text-decoration: none;
   cursor: pointer;
-}
+} */
 .c-btn.cc-light {
   border: 2px solid #000;
   background-color: transparent;
@@ -484,11 +484,11 @@ p {
 .c-icon__time {
   margin-right: 8px;
 }
-.is--white {
+/* .is--white {
   margin-bottom: 12px;
   color: #fff;
   text-decoration: none;
-}
+} */
 .is--white.opacity-60 {
   margin-bottom: 16px;
   color: hsla(0, 0%, 100%, 0.6);
@@ -804,14 +804,14 @@ p {
 .c-content-holder.flex.p-btm__72 {
   padding-bottom: 0;
 }
-.c-content_wrapper {
+/* .c-content_wrapper {
   max-width: 50%;
   padding-bottom: 40px;
-}
-.c-content_wrapper.cc-100 {
+} */
+/* .c-content_wrapper.cc-100 {
   width: 100%;
   max-width: none;
-}
+} */
 .c-content_wrapper.cc-100.p-both {
   padding-top: 42px;
   padding-bottom: 32px;
@@ -875,23 +875,23 @@ p {
 .c-content_wrapper.p-top__72 {
   padding-top: 0;
 }
-.c-text__content {
+/* .c-text__content {
   max-width: 50ch;
   padding-bottom: 32px;
-}
-.c-text__content.center-text.cc-30.mg-auto {
+} */
+/* .c-text__content.center-text.cc-30.mg-auto {
   min-width: auto;
   margin: 0 auto;
   padding-top: 0;
-}
-.c-text__content.cc-30 {
+} */
+/* .c-text__content.cc-30 {
   max-width: 30ch;
   min-width: 30ch;
   padding-bottom: 0;
-}
-.c-text__content.cc-30.center-text {
+} */
+/* .c-text__content.cc-30.center-text {
   max-width: 30ch;
-}
+} */
 .c-assess__svg {
   width: 100%;
   height: 100%;
@@ -1378,7 +1378,7 @@ p {
   -o-object-fit: cover;
   object-fit: cover;
 }
-.c-info__holder {
+/* .c-info__holder {
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1389,7 +1389,7 @@ p {
   padding: 15px 10px;
   border-radius: 17px;
   background-color: rgba(0, 154, 255, 0.09);
-}
+} */
 .c-info__holder.cc-green {
   background-color: rgba(53, 200, 159, 0.09);
 }
@@ -1413,12 +1413,12 @@ p {
   -ms-flex-item-align: start;
   align-self: flex-start;
 }
-.heading-7 {
+/* .heading-7 {
   color: #009aff;
 }
 .heading-7.cc-green {
   color: #35c89f;
-}
+} */
 .no-padding {
   margin-top: 0;
   margin-bottom: 0;
@@ -1438,17 +1438,17 @@ p {
   margin-right: 10px;
   background-color: #0f172a;
 }
-.beige-color {
+/* .beige-color {
   color: #fdf5f7;
 }
 .beige-color.mg-btm__100 {
   margin-bottom: 100px;
-}
-.p-top__46 {
+} */
+/* .p-top__46 {
   padding-top: 46px;
   padding-right: 0;
   padding-left: 0;
-}
+} */
 .cc-hide {
   display: none;
 }
