--- a/src/css/resources/resource.css
+++ b/src/css/resources/resource.css
@@ -241,12 +241,12 @@ p {
   font-size: 16px;
   line-height: 24px;
 }
-.c-section {
+/* .c-section {
   position: relative;
   padding-top: 80px;
   padding-bottom: 80px;
   color: #0f172a;
-}
+} */
 .c-ctn {
   width: 85%;
   max-width: 1280px;
